# co2_checker

./: Dockerfile  README.md  main.js  mhz19Pwm.js  package-lock.json  package.json  pyproject.toml  simple_server.py
.github/workflows/: build-and-push.yml
co2_checker/: co2_checker.py
co2_checker/i2c_lcd/: i2c_lcd.py
