[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.scripts]
start = "test:main"

[tool.poetry.dependencies]
python = "^3.9"
"RPi.GPIO" = "0.7.1a4"
mh-z19 = "^3.1.1"
adafruit-circuitpython-charlcd = "^3.3.12"
Adafruit-Blinka = "^6.20.1"
dht11 = "^0.1.0"
python-daemon = "^2.3.0"
smbus = "^1.1.post2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
